--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="header-nav">
         <ul class="header-list list">
           <li class="header-item-right item">
-            <a href="./index.html" class="header-link link">Студия</a>
+            <a href="./index.html" class="header-link link current">Студия</a>
           </li>
           <li class="header-item-right item">
             <a href="./portfolio.html" class="header-link link">Портфолио</a>
@@ -32,12 +32,10 @@
       </nav>
       <ul class="header-list list">
         <li class="header-item-left item">
-          <a href="mailto:info@devstudio.com" class="header-link link"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com" class="header-link link tel">info@devstudio.com</a >
         </li>
         <li class="header-item-left item">
-          <a href="tel:0961111111" class="header-link link"> 096 111 11 11</a>
+          <a href="tel:0961111111" class="header-link link tel"> 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -100,23 +98,23 @@
         <ul class="team-list list">
           <li class="team-item item">
             <img src="./images/igord.jpg" width="270" alt="Игорь Демьяненко" />
-            <p><a href="" class="link team-names">Игорь Демьяненко</a></p>
+            <p class="solution-name">Игорь Демьяненко</p>
             <p class="solution-text">Product Designer</p>
           </li>
           <li class="team-item item">
             <img src="./images/olgar.jpg" width="270" alt="Ольга Репина" />
-            <p><a href="" class="link team-names">Ольга Репина</a></p>
-            <p>Frontend Developer</p>
+            <p class="solution-name">Ольга Репина</p>
+            <p class="solution-text">Frontend Developer</p>
           </li>
           <li class="team-item item">
             <img src="./images/kolyat.jpg" width="270" alt="Николай Тарасов" />
-            <p><a href="" class="link team-names">Николай Тарасов</a></p>
-            <p>Marketing</p>
+            <p class="solution-name">Николай Тарасов</p>
+            <p class="solution-text">Marketing</p>
           </li>
           <li class="team-item item">
             <img src="./images/mixae.jpg" width="270" alt="Михаил Ермаков" />
-            <p><a href="" class="link team-names">Михаил Ермаков</a></p>
-            <p>UI Designer</p>
+            <p class="solution-name">Михаил Ермаков</p>
+            <p class="solution-text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -132,12 +130,12 @@
       </address>
       <ul class="footer-list list">
         <li class="footer-item">
-          <a href="mailto:info@devstudio.com" class="footer-address link"
+          <a href="mailto:info@devstudio.com" class="footer-address-tel link"
             >info@devstudio.com</a
           >
         </li>
         <li class="footer-item">
-          <a href="tel:0961111111" class="footer-address link">
+          <a href="tel:0961111111" class="footer-address-tel link">
             096 111 11 11</a
           >
         </li>
