--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,10 @@
       <nav class="header-nav">
         <ul class="header-list list">
           <li class="header-item-right item">
-            <a href="./index.html" class="header-link link">Студия</a>
+            <a href="./index.html" class="header-link link ">Студия</a>
           </li>
           <li class="header-item-right item">
-            <a href="./portfolio.html" class="header-link link">Портфолио</a>
+            <a href="./portfolio.html" class="header-link link current">Портфолио</a>
           </li>
           <li class="header-item-right item">
             <a href="" class="header-link link">Контакты</a>
@@ -31,12 +31,12 @@
       </nav>
       <ul class="header-list list">
         <li class="header-item-left item">
-          <a href="mailto:info@devstudio.com" class="header-link link"
+          <a href="mailto:info@devstudio.com" class="header-link link tel"
             >info@devstudio.com</a
           >
         </li>
         <li class="header-item-left item">
-          <a href="tel:0961111111" class="header-link link"> 096 111 11 11</a>
+          <a href="tel:0961111111" class="header-link link tel"> 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -138,12 +138,12 @@
       </address>
       <ul class="footer-list list">
         <li class="footer-item">
-          <a href="mailto:info@devstudio.com" class="footer-address link"
+          <a href="mailto:info@devstudio.com" class="footer-address-tel link"
             >info@devstudio.com</a
           >
         </li>
         <li class="footer-item">
-          <a href="tel:0961111111" class="footer-address link">
+          <a href="tel:0961111111" class="footer-address-tel link">
             096 111 11 11</a
           >
         </li>
